--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
   </head>
   <body>
     <nav>
-      <!-- <div class="logo">The Hilal Foundation Basketball</div> -->
+      <!-- <div class="logo"><img src="small-logo.png" alt="logo"></div>  -->
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -353,5 +353,11 @@
       </section>
      
     <!--end of faqs-->
+    <nav>
+        <div class="logo"><img src="small-logo.png" alt="logo"></div> 
+        <ul>
+          <li><a href="index.html">Home</a></li>
+        </ul>
+      </nav>
   </body>
 </html>
