added google form

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         <h1>Registration</h1>
         <h2>You can register by filling out the form</h2>
         <ul>
-          <li>need to add google form</li>
+          <li><a href="https://forms.gle/BDtrTHvm8mDZrwSL6">Click Here</a></li>
           
         </ul>
       </section> 
