added google form

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
           font-weight: bold;
           text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
         }
+        #first h2 {
+          text-align: center; 
+          padding: 20px 0;
+          color: #0a07c0; ;
+          font-weight: bold;
+          text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+        }
         #about {
         padding: 2rem;
         background-color: white;
@@ -290,7 +297,8 @@
       </ul>
     </nav>
     <section id ="first">
-        <h1>Basketball Brotherhood Belief</h1>
+        <!-- <h1>Hilal Foundation Basketball</h1> -->
+        <h2>Basketball Brotherhood Belief</h2>
     </section>
     
     <section id="home" class="cover">
